--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "⋆ Arul-𝙐𝙨𝙚𝙧𝙗𝙤𝙩 ⋆",
+  "name": "⋆ 𝗔𝗿𝘂𝗹-𝙐𝙨𝙚𝙧𝙗𝙤𝙩 ⋆",
   "description": "[Arul-Userbot] Userbot Hanya Untuk Bersenang - Senang",
   "logo": "https://telegra.ph/file/10fab266482d61882bfe2.jpg",
   "keywords": ["telegram", "userbot", "Arul-Userbot", "modular", "python"],
